# django-drf-ecommerce

./: .gitignore  README.md  manage.py  pytest.ini  requirements.txt  setup.cfg
config/: __init__.py  urls.py
config/settings/: __init__.py  base.py  local.py  production.py
ecommerce/api/v1/: urls.py
ecommerce/core/: apps.py
ecommerce/core/app_template/: __init__.py-tpl  apps.py-tpl
ecommerce/core/management/commands/: startapp.py
ecommerce/product/: __init__.py  admin.py  apps.py  models.py
ecommerce/product/api/v1/: serializers.py  urls.py  views.py
ecommerce/product/migrations/: 0001_initial.py
