[metadata]
name = django-drf
version = 0.1.0
author = Milan Khati
author_email = iammilankhati@gmail.com
description = A brief description of your project
long_description = file: README.md
long_description_content_type = text/markdown
; url = https://github.com/yourusername/my_project
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

# [options]
# packages = find:
# python_requires = >=3.6
# install_requires =
#     requests
#     numpy

[options.extras_require]
dev =
    flake8
    black
    pytest

[tool.black]
# line-length = 99
# skip-string-normalization = true

[isort]
profile = black

[flake8]
max-line-length = 99

# extent-ignore = E501, W503
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[tool:pytest]
testpaths = tests

# [coverage:run]
# branch = True
# omit = 
#     tests/*
#     setup.py
# 
# [coverage:report]
# show_missing = True
# skip_covered = True
